--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 {% block title %} Home
 {% endblock title %}
+
+{% block content %}
+<h1>Welcome to Flat 50% sale!!Buy your desired products at low cost.</h1>
+{% endblock content %}
+
 {% block body %}
 <section id="portfolio" class="portfolio">
   <div class="container">
