--- a/templates/contact.html
+++ b/templates/contact.html
@@ -1,5 +1,50 @@
 {% extends 'base.html' %}
 {% block title %}Contact{% endblock title %}
 {% block body %}
-<h1>Contact Us</h1>
+<h1 class="text-center">Contact Us</h1>
+
+
+<div class="Container mt-2">
+    <div class="row">
+        
+        <div class="col-md-4"></div>
+        <div class="col-md-4">
+            {% for message in messages %}
+      <div class="alert alert-{{message.tags}} alert-dismissable fade show" role="alert">
+        <strong>{{message}}</strong>
+        <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+
+      </div>
+      {% endfor %}
+            <form action="/contact" method="post">
+                {% csrf_token %}
+                <br>
+                <label for="Name">FullName</label>
+                <div class="form-group">
+                <input type="text" class="form-control" name="name" id="name" required>
+                </div>
+                <label for="email">Email</label>
+                <div class="form-group">
+                <input type="email" class="form-control" name="email" id="email" required>
+                </div>
+                
+                <label for="desc">How Can I help You?</label>
+                <div class="form-group">
+                <textarea type="text" class="form-control" name="desc" id="desc" required></textarea>
+                </div>
+                <label for="Phone">Phone Number</label>
+                <div class="form-group">
+                <input type="text" class="form-control" name="phone" id="phone" required>
+                </div>
+                <br>
+
+                <button type="submit" class="btn btn-dark"> Submit </button>
+                
+              </form>
+              
+        </div>
+        <div class="col-md-4"></div>
+    </div>
+
+</div>
 {% endblock body %}
